package main.java.br.com.frameworkPpr.boardgame.padroes.comportamentais.observer;

public interface Observer {
    void update(String evento);
}
